# p2p-tor-chat

./: .gitignore  Cargo.toml  README.md  chat.glade  menu.glade  peer-connect.glade  plan.txt  profile-select.glade
src/: main.rs
