# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name= "p2p-tor-chat"
version= "0.1.0"
edition= "2018"
[dependencies]
torut= "0.1.7"
tokio= { version= "0.3.5", features= ["net","macros","rt-multi-thread","sync"] }
gtk= "0.9.2"
gdk= "0.13.2"
glib= "0.10.3"
gio= "0.9.1"
socks= "0.3.3"
threadpool= "1.8.1"
gdk-pixbuf= "0.9.0"
rand= "0.8.0"
serde= {version="1.0",features=["derive"]}
bincode= "1.3.1"